# Rust-UHI-Server

./: .cursorrules  .gitignore  Cargo.toml  README.md  env.example
.cursor/rules/: agentic_capabilities.mdc  code_style.mdc  file_management.mdc  project_context.mdc  systems_thinking.mdc  task_workflow.mdc  validation.mdc
config/: default.toml  development.toml
docs/: architecture.mermaid  status.md  tasks.md  technical.md
docs/services/: README.md  catalog-service.md  fulfillment-service.md  network-registry-service.md  order-service.md  provider-service.md  search-service.md
src/: config.rs  errors.rs  logging.rs  main.rs  routes.rs
src/handlers/: confirm.rs  init.rs  mod.rs  network_registry.rs  search.rs  select.rs  status.rs
src/models/: billing.rs  catalog.rs  context.rs  fulfillment.rs  mod.rs  network_registry.rs  order.rs  payment.rs  provider.rs
src/services/: catalog.rs  error.rs  fulfillment.rs  mod.rs  network_registry.rs  order.rs  provider.rs  search.rs
src/storage/: mod.rs
src/storage/memory/: mod.rs  tests.rs
